base/spring-boot-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
  namespace: servmvn
spec:
  selector:
    matchLabels:
      app: spring-boot-demo
  template:
    metadata:
      labels:
        app: spring-boot-demo
    spec:
      imagePullSecrets:
        - name: harborsecret
      containers:
        - image: harbor.my.org:1080/maven-app/spring-boot-demo:latest
          name: spring-boot-demo
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 200m
              memory: 2Gi
          livenessProbe:
            httpGet:
              path: /hello
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /hello
              port: 8080
