base/spring-boot-demo/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myservice
  namespace: servmvn
spec:
  selector:
    app: spring-boot-demo
  ports:
    - name: myport
      protocol: TCP
      port: 8080
      targetPort: 8080
