base/spring-boot-demo/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myroute
  namespace: servmvn
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dstrserv.my.org`) && PathPrefix(`/mvn/sbd`)
      kind: Rule
      services:
        - name: myservice-spring-boot-demo
          port: 8080
      middlewares:
        - name: strip2prefixregex
